// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressTable should render 1`] = `
<DocumentFragment>
  <div
    data-testid="AddressTable"
  >
    <h2
      class="py-5 text-2xl font-bold"
    >
      Select Address
    </h2>
    <div
      class="sc-AxirZ kYeMxY"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                   
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Address
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                   
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Balance
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                   
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Delegate
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Rank
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--7"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Profile
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--8"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Status
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--9"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                   
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-dotted border-theme-neutral-300"
          >
            <td
              class="py-5"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 izXmpv"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </td>
            <td
              class="w-20 py-5"
            >
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  ARK Wallet 1
                </span>
                <span
                  class="sc-AxiKw bOTXee text-theme-neutral-light font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  D8rr7B1d6…VBMs6YUYD
                </span>
              </div>
            </td>
            <td
              class="w-20 py-5 text-sm font-bold text-center align-middle"
            >
              <div
                class="inline-flex items-center space-x-2"
              >
                <span
                  class="text-theme-neutral-600"
                >
                  <div
                    class="sc-AxjAm vZRQY"
                    height="16"
                    width="16"
                  >
                    <svg>
                      multisig.svg
                    </svg>
                  </div>
                </span>
              </div>
            </td>
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            >
              <span
                data-testid="Amount"
              >
                33.75089801 DARK
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="sc-AxhUy fHeTTV border-theme-neutral-300"
              />
            </td>
            <td
              class="py-5 font-bold"
            >
              <span
                class="text-theme-neutral-light"
              >
                N/A
              </span>
            </td>
            <td
              class="py-5 font-bold text-theme-neutral-dark"
            />
            <td
              class="py-5"
            />
            <td
              class="py-5"
            />
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <button
                  class="sc-AxhCb BegvR"
                  color="primary"
                  data-testid="AddressRow__select-0"
                  type="button"
                >
                  Select
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddressTable should render with empty list 1`] = `
<DocumentFragment>
  <div
    data-testid="AddressTable"
  >
    <h2
      class="py-5 text-2xl font-bold"
    >
      Select Address
    </h2>
    <div
      class="sc-AxirZ kYeMxY"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                   
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Address
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                   
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Balance
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                   
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Delegate
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Rank
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--7"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Profile
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--8"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Status
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--9"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                   
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        />
      </table>
    </div>
  </div>
</DocumentFragment>
`;
